--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="keywords" content="">
     <meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0" />
-   
+
     <script src="js/jquery-3.6.0.min.js"></script>
     <script src="js/javaScript.js"></script>
 
@@ -26,10 +26,10 @@
 
             <nav class="menu-desktop">
                 <ul>
-                    <li><a href="#quemsou">Inicio</a></li>
-                    <li><a href="#depoimentos">depoimentos</a></li>
-                    <li><a href="#sobre">sobre</a></li>
-                    <li><a href="#contato">contato</a></li>
+                    <li><a class="quemsou" href="#quemsou">Inicio</a></li>
+                    <li><a class="sobre" href="#sobre">sobre</a></li>
+                    <li><a class="depoimentos" href="#depoimentos">depoimentos</a></li>
+                    <li><a class="contato" href="#contato">contato</a></li>
                 </ul>
             </nav>
             <!--menu-desktop-->
@@ -98,7 +98,7 @@
     </section>
     <!--mosaico-->
 
-    <section class="servicos" id="quemsou">
+    <section class="servicos menu" id="quemsou" target="quemsou">
         <div class="container">
             <div class="box-servico">
                 <h2>Lorem Ipsum</h2>
@@ -122,7 +122,7 @@
     </section>
     <!--servicos-->
 
-    <section class="perfil-container" id="sobre">
+    <section class="perfil-container menu" id="sobre" target="sobre">
         <div class="container">
             <div class="perfil-wraper">
                 <div class="perfil-wraper2">
@@ -224,7 +224,7 @@
     </section>
     <!--tratamentos-->
 
-    <section class="depoimentos" id="depoimentos">
+    <section class="depoimentos menu" id="depoimentos" target="depoimentos">
         <h2>Depoimentos</h2>
         <div class="depoimento-simples">
             <quote>"Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium,
@@ -270,7 +270,7 @@
             <!--img-mosaico-single-social-->
             <div class="img-mosaico-single-social">8</div>
             <!--img-mosaico-single-social-->
-            <div  class="img-mosaico-single-social">9</div>
+            <div class="img-mosaico-single-social">9</div>
             <!--img-mosaico-single-social-->
         </div>
         <!--mosaico-social-->
@@ -284,29 +284,29 @@
         <div class="clear"></div>
     </section>
     <!--social-->
-    <section class="contato" id="contato">
+    <section class="contato menu" id="contato" target="contato">
         <h2>Contato</h2>
         <form>
             <div class="form-wraper w100">
                 <span>Nome:</span>
-                <input name="nome" type="text"  />
+                <input name="nome" type="text" />
 
             </div>
             <!--form-wraper w100-->
             <div class="form-wraper w50">
                 <span>Email:</span>
-                <input name="e-mail" type="text"  />
+                <input name="e-mail" type="text" />
 
             </div>
             <div class="form-wraper w50">
                 <span>Telefone:</span>
-                <input name="Telefone" type="text"  />
+                <input name="Telefone" type="text" />
 
             </div>
             <!--form-wraper w50-->
             <div class="form-wraper w100">
                 <span>Mensagem:</span>
-                <textarea ></textarea>
+                <textarea></textarea>
 
 
             </div>
@@ -329,7 +329,7 @@
         <div class="container">
             <div class="footer-block">
                 <h2>Telefone</h2>
-                <p >(86)9999-9999</p>
+                <p>(86)9999-9999</p>
                 <a href="https://api.whatsapp.com/send?phone=5586981440991"></a>
             </div>
             <!--footer-block-->
