--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body>
 
     <header>
-        <div class="container">
+        <div class="container menuP">
             <div class="logo">
                 <img src="images/LOGO2.png">
             </div>
