--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 
 <head>
     <title>Projeto 04</title>
+
+    <link href="css/style.css" rel="stylesheet" type="text/css">
     <link href="css/style.css" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css2?família=Montserrat&display=swap" rel="stylesheet">
     <meta charset="utf-8" />
@@ -11,7 +13,9 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0" />
 
     <script src="js/jquery-3.6.0.min.js"></script>
+    <script src="js/slick.js"></script>
     <script src="js/javaScript.js"></script>
+    <script src="js/slides.js"></script>
 
 </head>
 
@@ -50,6 +54,7 @@
     </header>
 
     <section class="mosaico">
+
         <div class="mosaico--wraper">
             <div class="mosaico-single">
                 <div class="mosaico-img"></div>
@@ -95,6 +100,7 @@
             <!--mosaico-single-->
         </div>
         <!--mosaico--wraper-->
+
     </section>
     <!--mosaico-->
 
@@ -182,45 +188,48 @@
 
     <section class="tratamentos">
         <h2>Titulo Central</h2>
-        <div class="container-tartamento">
-            <div class="tratamento-simples">
-                <h2>titulo</h2>
-                <p> Odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi
-                    nesciunt.</p>
+        <div class="container-2">
+            <div class="container-tartamento">
+                <div class="tratamento-simples">
+                    <h2>titulo</h2>
+                    <p> Odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi
+                        nesciunt.</p>
+                </div>
+                <!--tratamento-simples-->
+                <div class="tratamento-simples">
+                    <h2>titulo</h2>
+                    <p> Odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi
+                        nesciunt.</p>
+                </div>
+                <!--tratamento-simples-->
+                <div class="tratamento-simples">
+                    <h2>titulo</h2>
+                    <p> Odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi
+                        nesciunt.</p>
+                </div>
+                <!--tratamento-simples-->
+                <div class="tratamento-simples">
+                    <h2>titulo</h2>
+                    <p> Odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi
+                        nesciunt.</p>
+                </div>
+                <!--tratamento-simples-->
+                <div class="tratamento-simples">
+                    <h2>titulo</h2>
+                    <p> Odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi
+                        nesciunt.</p>
+                </div>
+                <!--tratamento-simples-->
+                <div class="tratamento-simples">
+                    <h2>titulo</h2>
+                    <p> Odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi
+                        nesciunt.</p>
+                </div>
+                <!--tratamento-simples-->
             </div>
-            <!--tratamento-simples-->
-            <div class="tratamento-simples">
-                <h2>titulo</h2>
-                <p> Odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi
-                    nesciunt.</p>
-            </div>
-            <!--tratamento-simples-->
-            <div class="tratamento-simples">
-                <h2>titulo</h2>
-                <p> Odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi
-                    nesciunt.</p>
-            </div>
-            <!--tratamento-simples-->
-            <div class="tratamento-simples">
-                <h2>titulo</h2>
-                <p> Odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi
-                    nesciunt.</p>
-            </div>
-            <!--tratamento-simples-->
-            <div class="tratamento-simples">
-                <h2>titulo</h2>
-                <p> Odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi
-                    nesciunt.</p>
-            </div>
-            <!--tratamento-simples-->
-            <div class="tratamento-simples">
-                <h2>titulo</h2>
-                <p> Odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi
-                    nesciunt.</p>
-            </div>
-            <!--tratamento-simples-->
+            <!--container-tartamento-->
         </div>
-        <!--container-tartamento-->
+        <!--container-2-->
     </section>
     <!--tratamentos-->
 
