slick deu certo

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <title>Projeto 04</title>
 
-    <link href="css/style.css" rel="stylesheet" type="text/css">
+    <link href="css/slick.css" rel="stylesheet" type="text/css">
     <link href="css/style.css" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css2?família=Montserrat&display=swap" rel="stylesheet">
     <meta charset="utf-8" />
