--- a/index.html
+++ b/index.html
@@ -263,19 +263,33 @@
         <!--instagram-chamada-->
 
         <div class="mosaico-social">
-            <div class="img-mosaico-single-social">1</div>
+            <div class="img-mosaico-single-social">
+                <img src="images/M1.jpg">
+            </div>
             <!--img-mosaico-single-social-->
-            <div class="img-mosaico-single-social">2</div>
+            <div class="img-mosaico-single-social">
+                <img src="images/M2.jpg">
+            </div>
             <!--img-mosaico-single-social-->
-            <div class="img-mosaico-single-social">3</div>
+            <div class="img-mosaico-single-social">
+                <img src="images/M3.jpeg">
+            </div>
             <!--img-mosaico-single-social-->
-            <div class="img-mosaico-single-social">4</div>
+            <div class="img-mosaico-single-social">
+            4
+            </div>
             <!--img-mosaico-single-social-->
-            <div class="img-mosaico-single-social">5</div>
+            <div class="img-mosaico-single-social">
+                <img src="images/M4.jpg">
+            </div>
             <!--img-mosaico-single-social-->
-            <div class="img-mosaico-single-social">6</div>
+            <div class="img-mosaico-single-social">
+                <img src="images/M5.jpg">
+            </div>
             <!--img-mosaico-single-social-->
-            <div class="img-mosaico-single-social">7</div>
+            <div class="img-mosaico-single-social">
+                <img src="images/M6.jpg">
+            </div>
             <!--img-mosaico-single-social-->
             <div class="img-mosaico-single-social">8</div>
             <!--img-mosaico-single-social-->
